--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
-node_modules
-grunt
-less
-Gruntfile.js
-npm-debug.log
-.DS_Store
-*.md#*
-_book
-/book.pdf
-/book.epub
-exercises/index.js
-package-lock.json
+build.bat
 build/
